# usearch-bench

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  SimSIMD.h  USearch.h  bench.cpp
cmake/: benchmark.cmake  hdf5.cmake  highfive.cmake  usearch.cmake
